--- a/ADMFacturar/Views/Administracion/Index.cshtml
+++ b/ADMFacturar/Views/Administracion/Index.cshtml
@@ -8,7 +8,7 @@
             {
                 <a asp-action="Index" asp-controller="Clientes" class="transform hover:scale-105 transition duration-500">
                     <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
-                        <i class="fa-solid fa-user-tag text-5xl text-indigo-500 mb-4"></i>
+                        <i class="fa-solid fa-user-tag text-5xl text-white mb-4"></i>
                         <h3 class="text-lg font-semibold text-white">Clientes</h3>
                         <p class="text-white">Administración de Clientes</p>
                     </div>
@@ -19,7 +19,7 @@
             {
                 <a asp-action="Index" asp-controller="Articulos" class="transform hover:scale-105 transition duration-500">
                     <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
-                        <i class="fa-solid fa-grip-vertical text-5xl text-indigo-500 mb-4"></i>
+                        <i class="fa-solid fa-grip-vertical text-5xl text-white mb-4"></i>
                         <h3 class="text-lg font-semibold text-white">Artículos</h3>
                         <p class="text-white">Administración de Artículos</p>
                     </div>
@@ -27,7 +27,7 @@
 
                 <a asp-action="Index" asp-controller="Proveedores" class="transform hover:scale-105 transition duration-500">
                     <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
-                        <i class="fa-solid fa-address-book text-5xl text-indigo-500 mb-4"></i>
+                        <i class="fa-solid fa-address-book text-5xl text-white mb-4"></i>
                         <h3 class="text-lg font-semibold text-white">Proveedores</h3>
                         <p class="text-white">Administración de Proveedores</p>
                     </div>
@@ -35,7 +35,7 @@
 
                 <a asp-action="Index" asp-controller="Vendedores" class="transform hover:scale-105 transition duration-500">
                     <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
-                        <i class="fa-solid fa-user-tie text-5xl text-indigo-500 mb-4"></i>
+                        <i class="fa-solid fa-user-tie text-5xl text-white mb-4"></i>
                         <h3 class="text-lg font-semibold text-white">Vendedores</h3>
                         <p class="text-white">Administración de Vendedores</p>
                     </div>
@@ -43,7 +43,7 @@
 
                 <a asp-action="Index" asp-controller="Transportes" class="transform hover:scale-105 transition duration-500">
                     <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
-                        <i class="fa-solid fa-truck-fast text-5xl text-indigo-500 mb-4"></i>
+                        <i class="fa-solid fa-truck-fast text-5xl text-white mb-4"></i>
                         <h3 class="text-lg font-semibold text-white">Transportes</h3>
                         <p class="text-white">Administración de Transportes</p>
                     </div>
