--- a/ADMFacturar/Views/Seguridad/Login.cshtml
+++ b/ADMFacturar/Views/Seguridad/Login.cshtml
@@ -19,16 +19,16 @@
             <div>
                 <label asp-for="Correo" class="block text-lg font-medium leading-7 text-white"></label>
                 <div class="mt-2">
-                    <input asp-for="Correo" type="email" class="block w-full rounded-lg border-0 py-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-lg sm:leading-7" style="padding-left: 15px;" required>
-                </div>
+                    <input asp-for="Correo" type="email" class="block w-full rounded-lg bg-gray-700 py-3 text-white placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-lg sm:leading-7" style="padding-left: 15px;" required>
+                </div>                
             </div>
-
+             
             <div>
                 <div class="flex items-center justify-between">
                     <label asp-for="Contra" class="block text-lg font-medium leading-7 text-white">Contraseña</label>
                 </div>
                 <div class="mt-2">
-                    <input asp-for="Contra" type="password" class="block w-full rounded-lg border-0 py-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-lg sm:leading-7" style="padding-left: 15px;" required>
+                    <input asp-for="Contra" type="password" class="block w-full rounded-lg bg-gray-700 py-3 text-white placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-lg sm:leading-7" style="padding-left: 15px;" required>
                 </div>
             </div>
 
