--- a/ADMFacturar/Views/Inventario/IndexGeneral.cshtml
+++ b/ADMFacturar/Views/Inventario/IndexGeneral.cshtml
@@ -8,7 +8,7 @@
             {
                 <a asp-action="Index" asp-controller="Inventario" class="transform hover:scale-105 transition duration-500">
                     <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
-                        <i class="fa-solid fa-box-open text-5xl text-indigo-500 mb-4"></i>
+                        <i class="fa-solid fa-box-open text-5xl text-white mb-4"></i>
                         <h3 class="text-lg font-semibold text-white">Ingreso de Inventario</h3>
                         <p class="text-white">Administración de Ingresos de Inventario</p>
                     </div>
@@ -16,7 +16,7 @@
 
                 <a asp-action="IndexSalida" asp-controller="Inventario" class="transform hover:scale-105 transition duration-500">
                     <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
-                        <i class="fa-solid fa-dolly text-5xl text-indigo-500 mb-4"></i>
+                        <i class="fa-solid fa-dolly text-5xl text-white mb-4"></i>
                         <h3 class="text-lg font-semibold text-white">Salida de Inventario</h3>
                         <p class="text-white">Administración de Salidas de Inventario</p>
                     </div>
@@ -24,7 +24,7 @@
 
                 <a asp-action="IndexExistencias" asp-controller="Inventario" class="transform hover:scale-105 transition duration-500">
                     <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
-                        <i class="fa-solid fa-clipboard-list text-5xl text-indigo-500 mb-4"></i>
+                        <i class="fa-solid fa-clipboard-list text-5xl text-white mb-4"></i>
                         <h3 class="text-lg font-semibold text-white">Consulta de Inventario</h3>
                         <p class="text-white">Consulta de Existencias de Artículos</p>
                     </div>
@@ -35,7 +35,7 @@
             {
                 <a asp-action="IndexExistencias" asp-controller="Inventario" class="transform hover:scale-105 transition duration-500">
                     <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
-                        <i class="fa-solid fa-clipboard-list text-5xl text-indigo-500 mb-4"></i>
+                        <i class="fa-solid fa-clipboard-list text-5xl text-white mb-4"></i>
                         <h3 class="text-lg font-semibold text-white">Consulta de Inventario</h3>
                         <p class="text-white">Consulta de Existencias de Artículos</p>
                     </div>
