--- a/ADMFacturar/Views/CXC/Index.cshtml
+++ b/ADMFacturar/Views/CXC/Index.cshtml
@@ -86,7 +86,7 @@
         </div>
 
         <div class="overflow-auto mt-4">
-            <table id="tablaCXC" class="min-w-full bg-gray-800 text-white">
+            <table id="tablaCXCC" class="min-w-full bg-gray-800 text-white">
                 <thead class="bg-gray-900">
                     <tr>
                         <th class="py-3 px-4 text-center">Documento</th>
