--- a/ADMFacturar/Views/Inventario/IndexExistencias.cshtml
+++ b/ADMFacturar/Views/Inventario/IndexExistencias.cshtml
@@ -65,7 +65,7 @@
                     const row = `
                                 <tr class="even:bg-gray-700 hover:bg-gray-600">
                                     <td class="py-3 px-4 border-b border-gray-700">${item.pK_Articulo}</td>
-                                    <td class="py-3 px-4 border-b border-gray-700"${item.descripcion}</td>
+                                    <td class="py-3 px-4 border-b border-gray-700">${item.descripcion}</td>
                                     <td class="py-3 px-4 border-b border-gray-700">${item.cantidad}</td>
                             </tr>
                         `;
