--- a/ADMFacturar/Views/Inventario/SalidaInventario.cshtml
+++ b/ADMFacturar/Views/Inventario/SalidaInventario.cshtml
@@ -26,20 +26,20 @@
                 <div class="sm:col-span-2">
                     <label for="PK_FK_Documento" class="block text-sm font-medium leading-6 text-white">Número de Documento</label>
                     <div class="mt-2">
-                        <input asp-for="PK_FK_Documento" id="PK_FK_Documento" type="text" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" required>
+                        <input asp-for="PK_FK_Documento" id="PK_FK_Documento" type="text" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" required>
                     </div>
                 </div>
 
                 <div class="sm:col-span-2">
                     <label for="Fecha_Salida" class="block text-sm font-medium leading-6 text-white">Fecha de Salida</label>
                     <div class="mt-2">
-                        <input asp-for="Fecha_Salida" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" required>
+                        <input asp-for="Fecha_Salida" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" required>
                     </div>
                 </div>
                 <div class="sm:col-span-2">
                     <label for="Tipo_Salida" class="block text-sm font-medium leading-6 text-white">Tipo Salida</label>
                     <div class="mt-2">
-                        <select asp-for="Tipo_Salida" id="Tipo_Salida" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                        <select asp-for="Tipo_Salida" id="Tipo_Salida" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 37px;" required>
                             <option value="">Seleccione una opción</option>
                             <option value="Daño">Daño</option>
                             <option value="Regalía">Regalía</option>
@@ -52,7 +52,7 @@
                 <div class="sm:col-span-4">
                     <label for="Observaciones" class="block text-sm font-medium leading-6 text-white">Observaciones</label>
                     <div class="mt-2">
-                        <input asp-for="Observaciones" id="Observaciones" type="text" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                        <input asp-for="Observaciones" id="Observaciones" type="text" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
                     </div>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                 <div class="sm:col-span-2">
                     <label for="PK_FK_Articulo" class="block text-sm font-medium leading-6 text-white">Código Artículo</label>
                     <div class="mt-2 flex items-center space-x-2">
-                        <input asp-for="PK_FK_Articulo" value="" type="text" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" required>
+                        <input asp-for="PK_FK_Articulo" value="" type="text" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" required>
                         <button type="button" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded inline-flex items-center justify-center" onclick="openModal()">
                             <i class="fas fa-search"></i>
                         </button>
@@ -70,18 +70,19 @@
                 <div class="sm:col-span-2">
                     <label for="Cantidad" class="block text-sm font-medium leading-6 text-white">Cantidad</label>
                     <div class="mt-2">
-                        <input asp-for="Cantidad" value="" type="text" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" required>
+                        <input asp-for="Cantidad" value="" type="text" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" required>
                     </div>
                 </div>
                 <div class="sm:col-span-2">
-                    <label for="Costo" class="block text-sm font-medium leading-6 text-white">Agregar</label>
+                    <label for="Costo" class="block text-sm font-medium leading-6 text-white" style="visibility: hidden;">Agregar</label>
                     <div class="mt-2 flex items-center space-x-2">
-                        <!-- <input asp-for="Costo" value="" type="text" class="flex-grow rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;" required> -->
                         <button type="submit" asp-action="SalidaInventario" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-1.5 px-4 rounded">
                             Agregar Artículo
                         </button>
                     </div>
                 </div>
+
+
             </div>
         </div>
         <input asp-for="Estado" value="" type="hidden" />
@@ -94,9 +95,9 @@
 
     <!--                  Inicio Tabla                        -->
 
-    <div class="w-full mt-8">
-        <div class="flex justify-between items-center bg-gray-800 text-white p-4 rounded-t-lg">
-            <h3 class="text-xl font-semibold"><i class="fas fa-list mr-3"></i> Listado de Articulos</h3>
+    <div class="mt-8 bg-gray-800 p-6 rounded-lg shadow-lg">
+        <div class="flex justify-between items-center pb-4 border-b border-gray-700">
+            <h3 class="text-xl font-semibold text-white">Listado de Articulos</h3>
             <div class="flex items-center space-x-2">
                 <form id="guardarForm" method="post" asp-action="GuardarSalidaMercaderia">
                     <input type="hidden" name="PK" id="hiddenPK" />
@@ -105,70 +106,69 @@
                 <a href="@Url.Action("IndexSalida", "Inventario")" class="rounded-md bg-red-600 px-4 py-1.5 font-bold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-indigo-500">Salir</a>
             </div>
         </div>
-    </div>
-    <div class="bg-white rounded-b-lg shadow-lg overflow-hidden">
-        <table class="min-w-full leading-normal" id="tablaArticulos">
-            <thead>
-                <tr class="bg-gray-800 text-white">
-                    <th class="text-center py-3">Código</th>
-                    <th class="text-center py-3">Nombre</th>
-                    <th class="text-center py-3">Cantidad</th>
-                    <th class="text-center py-3">Acciones</th>
-                </tr>
-            </thead>
-            <tbody class="text-gray-700">
-                @if (articulos != null)
-                {
-                    @foreach (var articulo in articulos)
+        <div class="overflow-auto mt-4">
+            <table class="min-w-full bg-gray-800 text-white border-collapse" id="tablaArticulos">
+                <thead class="bg-gray-900">
+                    <tr>
+                        <th class="text-center py-3">Código</th>
+                        <th class="text-center py-3">Nombre</th>
+                        <th class="text-center py-3">Cantidad</th>
+                        <th class="text-center py-3">Acciones</th>
+                    </tr>
+                </thead>
+                <tbody class="text-white">
+                    @if (articulos != null)
                     {
-                        <tr class="border-b border-gray-200 hover:bg-gray-100">
-                            <td class="py-3 text-center">@articulo.PK_Articulo</td>
-                            <td class="py-3 text-center">@articulo.Descripcion</td>
-                            <td class="py-3 text-center">@articulo.Cantidad</td>
-                            <td class="py-3 text-center">
-                                <div class="flex justify-center space-x-2">
-                                    <form method="post" asp-action="EliminarArticuloSalida" class="eliminar-form">
-                                        <input type="hidden" name="PK_FK_Documento" id="pkDocumentoEliminar" value="">
-                                        <input type="hidden" name="PK_Articulo" value="@articulo.PK_Articulo">
-                                        <button type="submit" class="text-red-600 hover:text-red-900 bg-transparent border-none p-0" title="Eliminar">
-                                            <i class="fas fa-trash"></i>
-                                        </button>
-                                    </form>
-
-                                </div>
-                            </td>
-                        </tr>
+                        @foreach (var articulo in articulos)
+                        {
+                            <tr class="even:bg-gray-700 hover:bg-gray-600">
+                                <td class="py-3 text-center">@articulo.PK_Articulo</td>
+                                <td class="py-3 text-center">@articulo.Descripcion</td>
+                                <td class="py-3 text-center">@articulo.Cantidad</td>
+                                <td class="py-3 text-center">
+                                    <div class="flex justify-center space-x-2">
+                                        <form method="post" asp-action="EliminarArticuloSalida" class="eliminar-form">
+                                            <input type="hidden" name="PK_FK_Documento" id="pkDocumentoEliminar" value="">
+                                            <input type="hidden" name="PK_Articulo" value="@articulo.PK_Articulo">
+                                            <button type="submit" class="bg-red-500 text-white px-2 py-1 rounded hover:bg-red-600" title="Eliminar">
+                                                <i class="fa-solid fa-trash"></i>
+                                            </button>
+                                        </form>
+                                    </div>
+                                </td>
+                            </tr>
+                        }
                     }
-                }
-            </tbody>
-        </table>
+                </tbody>
+            </table>
+        </div>
     </div>
+
 
 
     <!--                  Inicio Modal                       -->
 
     <div id="modal" class="fixed inset-0 bg-gray-900 bg-opacity-75 flex items-center justify-center hidden">
-        <div class="bg-gray-900 text-white rounded-lg p-6 w-full max-w-md shadow-xl">
+        <div class="bg-gray-800 text-white rounded-lg p-6 w-full max-w-md shadow-xl">
             <div class="mb-6">
                 <h3 class="text-xl font-bold mb-4">Buscar Artículo</h3>
                 <div class="relative">
-                    <input type="text" id="buscarArticulo" class="block w-full rounded-md py-2 px-3 bg-white text-gray-900 placeholder-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6" placeholder="Buscar por código o descripción">
+                    <input type="text" id="buscarArticulo" class="block w-full rounded-md py-2 px-3 bg-gray-700 text-white placeholder-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" placeholder="Buscar por código o descripción">
                 </div>
             </div>
             <div class="overflow-x-auto">
-                <div class="bg-white rounded-b-lg shadow-lg overflow-hidden">
-                    <table class="min-w-full leading-normal" id="tablaArticulosModal">
-                        <thead>
-                            <tr class="bg-gray-800 text-white">
-                                <th class="text-center py-3 px-4">Código</th>
-                                <th class="text-center py-3 px-4">Descripción</th>
-                            </tr>
-                        </thead>
-                        <tbody class="text-gray-700">
-                            <!-- Filas de artículos generadas dinámicamente por JavaScript -->
-                        </tbody>
-                    </table>
-                </div>
+                <table class="min-w-full bg-gray-800 text-white" id="tablaArticulosModal">
+                    <thead class="bg-gray-900">
+                        <tr>
+                            <th class="py-3 px-4 text-center">Código</th>
+                            <th class="py-3 px-4 text-center">Descripción</th>
+                        </tr>
+                    </thead>
+                    <tbody class="text-center">
+                        <!-- Filas de artículos generadas dinámicamente por JavaScript -->
+                    </tbody>
+                </table>
+
             </div>
             <div class="mt-6 flex justify-end">
                 <button type="button" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded" onclick="closeModal()">Cerrar</button>
@@ -209,13 +209,12 @@
                     // Iterar sobre los artículos filtrados y agregar filas a la tabla
                     filteredData.forEach(articulo => {
                         console.log('Artículo:', articulo);
-
                         var row = `
-                                                        <tr class="border-b border-gray-200 hover:bg-gray-100" cursor-pointer" onclick="seleccionarArticulo('${articulo.pK_Articulo}', '${articulo.descripcion}')">
-                                                        <td class="py-3 text-center">${articulo.pK_Articulo}</td>
-                                                        <td class="py-3 text-center">${articulo.descripcion}</td>
-                                                    </tr>
-                                                `;
+                                                                       <tr class="even:bg-gray-700 hover:bg-gray-600 cursor-pointer" onclick="seleccionarArticulo('${articulo.pK_Articulo}', '${articulo.descripcion}')">
+                                                                                    <td class="py-3 px-4 border-b border-gray-700">${articulo.pK_Articulo}</td>
+                                                                                    <td class="py-3 px-4 border-b border-gray-700">${articulo.descripcion}</td>
+                                                                                </tr>
+                                                                        `;
                         tableBody.innerHTML += row;
                     });
 
