--- a/ADMFacturar/Views/ImageGenerator/Index.cshtml
+++ b/ADMFacturar/Views/ImageGenerator/Index.cshtml
@@ -13,17 +13,17 @@
     ViewData["Title"] = "Generador de Imágenes";
 }
 
-<div class="min-h-screen chat-bg flex items-center justify-center py-6 px-4 sm:px-2 lg:px-8">
-    <div class="max-w-md w-full space-y-4 bg-white p-8 rounded-xl shadow-lg">
+<div class="min-h-screen h-screen chat-bg flex items-center justify-center py-0 px-4 sm:px-2 lg:px-8 overflow-hidden">
+    <div class="max-w-md w-full space-y-4 bg-gray-800 p-8 rounded-xl shadow-lg">
         <div class="flex items-center justify-center">
-            <img src="~/imgs/Logo Oscuro.png" style="width :80px" />
+            <img src="~/imgs/Logo Oscuro.png" style="width: 80px; filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(200%) contrast(100%);" />
         </div>
-        <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">Generar Imagen</h2>
+        <h2 class="mt-6 text-center text-3xl font-extrabold text-white">Generar Imagen</h2>
         <form class="mt-8 space-y-6" method="post" asp-action="GenerateImg">
             <div class="rounded-md shadow-sm -space-y-px">
                 <div class="mb-4">
                     <label for="prompt" class="sr-only">Prompt:</label>
-                    <input type="text" id="prompt" name="prompt" class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Escribe tu prompt" required>
+                    <input type="text" id="prompt" name="prompt" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" placeholder="Escribe tu idea" required>
                 </div>
             </div>
             <div>
