--- a/ADMFacturar/Views/Reportes/Index.cshtml
+++ b/ADMFacturar/Views/Reportes/Index.cshtml
@@ -24,48 +24,48 @@
                 {
                     <!-- Total de Venta -->
                     <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
-                        <i class="fas fa-chart-line text-5xl text-blue-500 mb-4"></i>
+                        <i class="fas fa-chart-line text-5xl text-white mb-4"></i>
                         <h3 class="text-lg font-semibold text-white">Total de Venta</h3>
                         <p class="text-white">₡@Html.DisplayFor(modelItem => Reporte.TotalVenta)</p>
                     </div>
                     <!-- Total de Cobro -->
                     <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
-                        <i class="fas fa-coins text-5xl text-blue-500 mb-4"></i>
+                        <i class="fas fa-coins text-5xl text-white mb-4"></i>
                         <h3 class="text-lg font-semibold text-white">Total de Cobro</h3>
                         <p class="text-white">₡@Html.DisplayFor(modelItem => Reporte.TotalCobro)</p>
                     </div>
 
                     <!-- Total de Ganancia -->
                     <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
-                        <i class="fas fa-money-bill text-5xl text-blue-500 mb-4"></i>
+                        <i class="fas fa-money-bill text-5xl text-white mb-4"></i>
                         <h3 class="text-lg font-semibold text-white">Total de Ganancia</h3>
                         <p class="text-white">₡@Html.DisplayFor(modelItem => Reporte.TotalGanancia)</p>
                     </div>
 
                     <!-- Total Costo Inventario -->
                     <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
-                        <i class="fas fa-warehouse text-5xl text-blue-500 mb-4"></i>
+                        <i class="fas fa-warehouse text-5xl text-white mb-4"></i>
                         <h3 class="text-lg font-semibold text-white">Total Costo Inventario</h3>
                         <p class="text-white">₡@Html.DisplayFor(modelItem => Reporte.TotalCosto)</p>
                     </div>
 
                     <!-- Total Descuentos -->
                     <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
-                        <i class="fas fa-percent text-5xl text-blue-500 mb-4"></i>
+                        <i class="fas fa-percent text-5xl text-white mb-4"></i>
                         <h3 class="text-lg font-semibold text-white">Total de Descuentos</h3>
                         <p class="text-white">₡@Html.DisplayFor(modelItem => Reporte.TotalDescuentos)</p>
                     </div>
 
                     <!-- Total Notas de Crédito -->
                     <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
-                        <i class="far fa-credit-card text-5xl text-blue-500 mb-4"></i>
+                        <i class="far fa-credit-card text-5xl text-white mb-4"></i>
                         <h3 class="text-lg font-semibold text-white">Total Notas de Crédito</h3>
                         <p class="text-white">₡@Html.DisplayFor(modelItem => Reporte.TotalNotaCredito)</p>
                     </div>
 
                     <!-- Total de Compras -->
                     <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
-                        <i class="fas fa-shopping-bag text-5xl text-blue-500 mb-4"></i>
+                        <i class="fas fa-shopping-bag text-5xl text-white mb-4"></i>
                         <h3 class="text-lg font-semibold text-white">Total de Compras</h3>
                         <p class="text-white">₡@Html.DisplayFor(modelItem => Reporte.TotalCompras)</p>
                     </div>
