--- a/ADMFacturar/Views/Reportes/REstadosCuentas.cshtml
+++ b/ADMFacturar/Views/Reportes/REstadosCuentas.cshtml
@@ -47,22 +47,6 @@
                     </div>
                 </div>
             </div>
-
-            <div class="sm:col-span-1">
-                <fieldset>
-                    <legend class="block text-sm font-medium leading-6 text-white">Estado</legend>
-                    <div class="mt-3 flex items-center gap-x-10">
-                        <div class="flex items-center gap-x-2 bg-yellow-100 text-yellow-800 text-md font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-yellow-400">
-                            <input id="estadoPendientes" name="estado" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
-                            <label for="estadoPendientes" class="block text-sm font-medium leading-6 text-gray-900">Pendientes</label>
-                        </div>
-                        <div class="flex items-center gap-x-2 bg-green-100 text-green-800 text-md font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-green-400">
-                            <input id="estadoCompletados" name="estado" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
-                            <label for="estadoCompletados" class="block text-sm font-medium leading-6 text-gray-900">Completados</label>
-                        </div>
-                    </div>
-                </fieldset>
-            </div>
         </div>
     </form>
     <!--Final de From-->
@@ -80,7 +64,7 @@
             <table id="tablaReportesEstadoCuentas" class="min-w-full bg-gray-800 text-white">
                 <thead class="bg-gray-900">
                     <tr>
-                        <th class="py-3 px-4 text-center">PK_Factura</th>
+                        <th class="py-3 px-4 text-center">Factura</th>
                         <th class="py-3 px-4 text-center">Nombre Cliente</th>
                         <th class="py-3 px-4 text-center">Fecha</th>
                         <th class="py-3 px-4 text-center">Fecha Vencimiento</th>
