--- a/ADMFacturar/Views/Reportes/RVendedores.cshtml
+++ b/ADMFacturar/Views/Reportes/RVendedores.cshtml
@@ -63,7 +63,7 @@
             <table id="tablaVendedores" class="min-w-full bg-gray-800 text-white">
                 <thead class="bg-gray-900">
                     <tr>
-                        <th class="py-3 px-4 text-center">ID Factura</th>
+                        <th class="py-3 px-4 text-center">Factura</th>
                         <th class="py-3 px-4 text-center">Nombre Cliente</th>
                         <th class="py-3 px-4 text-center">Fecha</th>
                         <th class="py-3 px-4 text-center">Nombre Vendedor</th>
