--- a/ADMFacturar/Views/Reportes/RVentas.cshtml
+++ b/ADMFacturar/Views/Reportes/RVentas.cshtml
@@ -79,7 +79,7 @@
 			<table id="tablaVentas" class="min-w-full bg-gray-800 text-white">
 				<thead class="bg-gray-900">
 					<tr>
-						<th class="py-3 px-4 text-center">ID Factura</th>
+						<th class="py-3 px-4 text-center">Factura</th>
 						<th class="py-3 px-4 text-center">Nombre Cliente</th>
 						<th class="py-3 px-4 text-center">Fecha</th>
 						<th class="py-3 px-4 text-center">Vendedor</th>
