--- a/ADMFacturar/Views/Facturas/Index.cshtml
+++ b/ADMFacturar/Views/Facturas/Index.cshtml
@@ -101,8 +101,8 @@
                                     <button class="ver-detalles bg-green-500 hover:bg-green-600 text-white py-1 px-3 rounded" title="Detalles" data-documento="${item.documento}" data-tipodoc="${item.tipoDoc}">
                                         <i class="fas fa-eye"></i>
                                         </button>
-                                    <button class="imprimirPDF  bg-green-500 hover:bg-green-600 text-white py-1 px-3 rounded" data-documento="${item.documento}">
-                                        Generar PDF
+                                        <button class="imprimirPDF  bg-gray-500 hover:bg-gray-600 text-white py-1 px-3 rounded" data-documento="${item.documento}">
+                                            <i class="fa-solid fa-print" style="color: #ffffff;"></i>
                                     </button>
                                     
                                 </td>
